--- a/BayrakBilmece/BayrakBilmece.csproj
+++ b/BayrakBilmece/BayrakBilmece.csproj
@@ -88,6 +88,12 @@
     <Compile Include="Hakkinda.Designer.cs">
       <DependentUpon>Hakkinda.cs</DependentUpon>
     </Compile>
+    <Compile Include="KarakterSecimi.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="KarakterSecimi.Designer.cs">
+      <DependentUpon>KarakterSecimi.cs</DependentUpon>
+    </Compile>
     <Compile Include="Oyun.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -146,6 +152,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Hakkinda.resx">
       <DependentUpon>Hakkinda.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="KarakterSecimi.resx">
+      <DependentUpon>KarakterSecimi.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Oyun.resx">
       <DependentUpon>Oyun.cs</DependentUpon>
