--- a/BayrakBilmece/BayrakBilmece.csproj
+++ b/BayrakBilmece/BayrakBilmece.csproj
@@ -120,6 +120,11 @@
     <Compile Include="Sonuc.Designer.cs">
       <DependentUpon>Sonuc.cs</DependentUpon>
     </Compile>
+    <Compile Include="UlkeDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>UlkeDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Uyari.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -201,9 +206,25 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="UlkeDataSet.xsc">
+      <DependentUpon>UlkeDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="UlkeDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>UlkeDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="UlkeDataSet.xss">
+      <DependentUpon>UlkeDataSet.xsd</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Ulke.mdb">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
