--- a/BayrakBilmece/BayrakBilmece.csproj
+++ b/BayrakBilmece/BayrakBilmece.csproj
@@ -114,6 +114,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SilOnay.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SilOnay.Designer.cs">
+      <DependentUpon>SilOnay.cs</DependentUpon>
+    </Compile>
     <Compile Include="Sonuc.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -174,6 +180,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="SilOnay.resx">
+      <DependentUpon>SilOnay.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Sonuc.resx">
       <DependentUpon>Sonuc.cs</DependentUpon>
     </EmbeddedResource>
